--- a/slides/pdfs/deep_learning.tex
+++ b/slides/pdfs/deep_learning.tex
@@ -1,4 +1,4 @@
-% Created 2023-10-20 Fri 11:40
+% Created 2023-10-23 Mon 22:52
 % Intended LaTeX compiler: pdflatex
 \documentclass[presentation,smaller]{beamer}
 \usepackage[utf8]{inputenc}
@@ -20,8 +20,8 @@
 
 
 \section*{Transitioning from ML to DL}
-\label{sec:orgd6ab108}
-\begin{frame}[label={sec:orgd9cbe9d}]{Why Deep Learning?}
+\label{sec:org0509f3b}
+\begin{frame}[label={sec:org069d3a7}]{Why Deep Learning?}
 \begin{columns}
 \begin{column}{0.6\columnwidth}
 \begin{itemize}
@@ -42,7 +42,7 @@
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orge2a6262}]{Application of DL in biology}
+\begin{frame}[label={sec:org7edfec0}]{Application of DL in biology}
 \begin{center}
 \Large AlphaFold, AI to predict the fold of globular proteins at the experimental accuracy
 \end{center}
@@ -55,12 +55,12 @@ J. Jumper \emph{et al}, 2020, Nature
 (And \textgreater{} 50 years of data collection)
 \end{frame}
 
-\begin{frame}[label={sec:org9e6a783}]{What are the DL techniques used in protein sequence generation?}
+\begin{frame}[label={sec:org937b50e}]{What are the DL techniques used in protein sequence generation?}
 \begin{center}
 \Large \textbf{Generative models to sample sequences}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org4923243}]{Deep Generative Models}
+\begin{frame}[label={sec:orgc8aec73}]{Deep Generative Models}
 \begin{itemize}
 \item \alert{\alert{VAEs}}: Probabilistic; encoder-decoder structure.
 \item \alert{\alert{GANs}}: Generator vs. discriminator competition.
@@ -77,7 +77,7 @@ J. Jumper \emph{et al}, 2020, Nature
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org7470555}]{Variational Autoencoders (VAEs) in Protein Design}
+\begin{frame}[label={sec:orgce52ea2}]{Variational Autoencoders (VAEs) in Protein Design}
 \begin{columns}
 \begin{column}{0.6\columnwidth}
 \begin{itemize}
@@ -97,7 +97,7 @@ J. Jumper \emph{et al}, 2020, Nature
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orgbe2f936}]{Variational autoencoder framework [Ding \emph{et al}, 2020, Nat. Com.]}
+\begin{frame}[label={sec:org8bd5adb}]{Variational autoencoder framework [Ding \emph{et al}, 2020, Nat. Com.]}
 \begin{center}
 \includegraphics[width=.9\linewidth]{img/vae_scheme.png}
 \end{center}
@@ -115,7 +115,7 @@ J. Jumper \emph{et al}, 2020, Nature
 \end{equation}
 \end{frame}
 
-\begin{frame}[label={sec:org5d88413}]{Training of a VAE}
+\begin{frame}[label={sec:org1b6ec9e}]{Training of a VAE}
 \begin{block}{Architecture chosen by 5-fold cross validation}
 \begin{itemize}
 \item 1 \texttimes{} hidden (linear) layer fully connected (Encoder and Decoder)
@@ -146,16 +146,14 @@ J. Jumper \emph{et al}, 2020, Nature
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orgf5c13d3}]{Use a structure predictor to deduce sequences}
+\begin{frame}[label={sec:org039d4e1}]{Use a structure predictor to deduce sequences}
 \begin{center}
-\Large \textbf\{AlphaFold is so good at predicting the structure, can't we just
-invert it?\}
-
+\Large \textbf{AlphaFold is so good at predicting the structure, can't we just invert it?}
 Yes, we can!
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orge34d337}]{AlphaFold structure prediction}
+\begin{frame}[label={sec:org3b09c64}]{AlphaFold structure prediction}
 \begin{center}
 \includegraphics[width=.9\linewidth]{./img/AlphaFold_2.png}
 \end{center}
@@ -165,7 +163,7 @@ geometric information \(\rightarrow\) Any parameter on the way is differentiable
 even the input sequences.
 \end{frame}
 
-\begin{frame}[label={sec:orgfdfa1d2}]{AlphaFold: inverting the prediction}
+\begin{frame}[label={sec:orgfae0ef0}]{AlphaFold: inverting the prediction}
 Prediction of a structure's fold.
 \begin{center}
 \includegraphics[width=.9\linewidth]{./img/af_1.png}
@@ -173,7 +171,7 @@ Prediction of a structure's fold.
 
 (J. Jumper \emph{et al}, 2020, Nature)
 \end{frame}
-\begin{frame}[label={sec:org14dac5c}]{AlphaFold: inverting the prediction}
+\begin{frame}[label={sec:org5746914}]{AlphaFold: inverting the prediction}
 Compare the prediction to the true structure and update accordingly the
 parameters of AlphaFold using the \alert{gradient} of the loss function.
 
@@ -182,7 +180,7 @@ parameters of AlphaFold using the \alert{gradient} of the loss function.
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org44a068d}]{AlphaFold: inverting the prediction}
+\begin{frame}[label={sec:orgc15257d}]{AlphaFold: inverting the prediction}
 \alert{\alert{To design}}: use the gradient with respect to the input only to search for
 sequences that give the correct fold.
 
@@ -191,7 +189,7 @@ sequences that give the correct fold.
 \end{center}
 (Norm \emph{et al}, 2021, PNAS)
 \end{frame}
-\begin{frame}[label={sec:orgebc2ca7}]{Reverting AlphaFold}
+\begin{frame}[label={sec:org84ac002}]{Reverting AlphaFold}
 Encode the structure into distance matrices (D\textsubscript{i,j} = distance between residues
 i and j).
 \begin{center}
@@ -199,7 +197,7 @@ i and j).
 \end{center}
 (Norm \emph{et al}, 2021, PNAS)
 \end{frame}
-\begin{frame}[label={sec:org5ffaf26}]{Why doing so?}
+\begin{frame}[label={sec:orgc87f744}]{Why doing so?}
 \begin{itemize}
 \item Positive design: searching for sequences that fold into the target structure.
 \item Negative design: searching for sequences that fold \alert{only} into the target structure.
@@ -211,6 +209,164 @@ i and j).
 
 (Norm \emph{et al}, 2021, PNAS)
 \end{frame}
-\begin{frame}[label={sec:org48027d0}]{Graph neural network to design proteins conditioned on the structure}
+
+\begin{frame}[label={sec:org88e2d38}]{Graph neural network to model the structure}
+\begin{center}
+\Large \textbf{Represent protein structures using graph neural networks}
+Yes, we can!
+\end{center}
+\end{frame}
+\begin{frame}[label={sec:org5c42045}]{Design proteins conditioned on the structure}
+\begin{center}
+\includegraphics[width=.9\linewidth]{./img/proteinmpnn.jpg}
+\end{center}
+[Dauparas \emph{et al}, Science, 2022]
+\end{frame}
+
+\begin{frame}[label={sec:org59a5771}]{Graph neural network}
+\begin{columns}
+\begin{column}{0.5\columnwidth}
+\begin{center}
+\includegraphics[width=.9\linewidth]{img/p1.png}
+\end{center}
+\end{column}
+
+\begin{column}{0.5\columnwidth}
+\begin{center}
+\includegraphics[width=.9\linewidth]{img/mol_graph.png}
+\end{center}
+[Gilmer \emph{et al}, ICML, 2017]
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}[label={sec:orgb6b451d}]{Graph neural network}
+\begin{columns}
+\begin{column}{0.5\columnwidth}
+\begin{center}
+\includegraphics[width=.9\linewidth]{img/p2.png}
+\end{center}
+\end{column}
+
+\begin{column}{0.5\columnwidth}
+\begin{center}
+\includegraphics[width=.9\linewidth]{img/mol_graph.png}
+\end{center}
+[Gilmer \emph{et al}, ICML, 2017]
+\end{column}
+\end{columns}
+\end{frame}
+\begin{frame}[label={sec:org31a7a4a}]{Graph neural network}
+\begin{columns}
+\begin{column}{0.5\columnwidth}
+\begin{center}
+\includegraphics[width=.9\linewidth]{img/p3.png}
+\end{center}
+\end{column}
+
+\begin{column}{0.5\columnwidth}
+\begin{center}
+\includegraphics[width=.9\linewidth]{img/mol_graph.png}
+\end{center}
+[Gilmer \emph{et al}, ICML, 2017]
+\end{column}
+\end{columns}
+\end{frame}
+\begin{frame}[label={sec:org80836fa}]{Graph neural network}
+\begin{columns}
+\begin{column}{0.5\columnwidth}
+\begin{center}
+\includegraphics[width=.9\linewidth]{img/p4.png}
+\end{center}
+\end{column}
+
+\begin{column}{0.5\columnwidth}
+\begin{center}
+\includegraphics[width=.9\linewidth]{img/mol_graph.png}
+\end{center}
+[Gilmer \emph{et al}, ICML, 2017]
+\end{column}
+\end{columns}
+\end{frame}
+\begin{frame}[label={sec:org0c00959}]{Graph neural network}
+\begin{columns}
+\begin{column}{0.5\columnwidth}
+\begin{center}
+\includegraphics[width=.9\linewidth]{img/p5.png}
+\end{center}
+\end{column}
+
+\begin{column}{0.5\columnwidth}
+\begin{center}
+\includegraphics[width=.9\linewidth]{img/mol_graph.png}
+\end{center}
+[Gilmer \emph{et al}, ICML, 2017]
+\end{column}
+\end{columns}
+\end{frame}
+\begin{frame}[label={sec:org88c2622}]{Graph neural network}
+\begin{columns}
+\begin{column}{0.5\columnwidth}
+\begin{center}
+\includegraphics[width=.9\linewidth]{img/p6.png}
+\end{center}
+\end{column}
+
+\begin{column}{0.5\columnwidth}
+\begin{center}
+\includegraphics[width=.9\linewidth]{img/mol_graph.png}
+\end{center}
+[Gilmer \emph{et al}, ICML, 2017]
+\end{column}
+\end{columns}
+\end{frame}
+\begin{frame}[label={sec:org3afd185}]{Graph neural network}
+\begin{columns}
+\begin{column}{1\columnwidth}
+\begin{center}
+\includegraphics[width=.9\linewidth]{img/p7.png}
+\end{center}
+
+Predict a molecular property using the contextualized node vectors, for example,
+the binding free energy to a protein target.
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}[label={sec:orgd1f49bd}]{Graph neural network}
+\begin{columns}
+\begin{column}{0.5\columnwidth}
+\begin{center}
+\includegraphics[width=.9\linewidth]{img/p8.png}
+\end{center}
+
+Mask the identity of one atom\ldots{}
+\end{column}
+
+\begin{column}{0.5\columnwidth}
+\begin{center}
+\includegraphics[width=.9\linewidth]{img/mol_graph.png}
+\end{center}
+[Gilmer \emph{et al}, ICML, 2017]
+\end{column}
+\end{columns}
+\end{frame}
+\begin{frame}[label={sec:orga22fad1}]{Graph neural network}
+\begin{columns}
+\begin{column}{0.5\columnwidth}
+\begin{center}
+\includegraphics[width=.9\linewidth]{img/p9.png}
+\end{center}
+
+\ldots{}predict back the identity of the masked atom.
+\end{column}
+
+\begin{column}{0.5\columnwidth}
+\begin{center}
+\includegraphics[width=.9\linewidth]{img/mol_graph.png}
+\end{center}
+[Gilmer \emph{et al}, ICML, 2017]
+\end{column}
+\end{columns}
 \end{frame}
 \end{document}
